--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -16,7 +16,7 @@
 		xmlns:containers="net.vdombox.powerpack.lib.extendedapi.containers.*"
 		closing="closingApplicationHandler(event)"
 		styleName="builderWindowStyle" 
-		xmlns:customize1="net.vdombox.powerpack.lib.player.customize.*" xmlns:control="net.vdombox.powerpack.control.*" xmlns:tabnavigator="net.vdombox.powerpack.lib.extendedapi.containers.tabnavigator.*">
+		xmlns:customize1="net.vdombox.powerpack.lib.player.customize.*" xmlns:control="net.vdombox.powerpack.control.*" xmlns:tabnavigator="net.vdombox.powerpack.lib.extendedapi.containers.tabnavigator.*" xmlns:controlbar="net.vdombox.powerpack.control.controlbar.*">
 
 	<mx:Style source="assets/style/style.css" />
 	
@@ -99,7 +99,7 @@
 			import mx.utils.StringUtil;
 			
 			import net.vdombox.powerpack.*;
-			import net.vdombox.powerpack.control.ControlBarEvent;
+			import net.vdombox.powerpack.control.controlbar.ControlBarEvent;
 			import net.vdombox.powerpack.dialog.AboutProgramDialog;
 			import net.vdombox.powerpack.dialog.AirBuildProperties;
 			import net.vdombox.powerpack.dialog.EditCaption;
@@ -1299,7 +1299,7 @@
 	
 	<mx:VBox width="100%" height="100%">
 
-		<control:PowerPackControlBar 	id="powerpackControlBar"
+		<controlbar:PowerPackControlBar 	id="powerpackControlBar"
 										creationComplete="powerpackcontrolbar_creationCompleteHandler(event)"/>
 		
 		<mx:HRule width="100%" />
@@ -1321,7 +1321,7 @@
 					<mx:Panel creationIndex="1" width="100%" height="100%" layout="absolute"
 							  title="{LanguageManager.sentences.graph_editor}" backgroundAlpha="0.5">
 						<mx:VBox height="100%" width="100%" verticalGap="1">
-							<control:GraphEditorControlBar id="graphEditorControlBar"
+							<controlbar:GraphEditorControlBar id="graphEditorControlBar"
 														   width="100%"/>
 							
 							<mx:HRule width="100%" />
