--- a/ProContact/v.01/src/views/ContactDetails.mxml
+++ b/ProContact/v.01/src/views/ContactDetails.mxml
@@ -1,25 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<components:View xmlns:fx="http://ns.adobe.com/mxml/2009" 
-				 xmlns:s="library://ns.adobe.com/flex/spark" xmlns:components="spark.components.*" title="ContactDetails" >
+<components:View xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" xmlns:components="spark.components.*" title="ContactDetails">
 	<components:layout>
 		<s:VerticalLayout paddingLeft="10" paddingRight="10" paddingTop="10" paddingBottom="10" />
 	</components:layout>
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
-	<components:navigationContent >
-		<s:Button label="Back" click="navigator.popView();"/>
+	<fx:Script>
+		<![CDATA[
+			override public function set data( value : Object ) : void
+			{
+				// TODO Auto Generated method stub
+				super.data = value;
+
+			}
+		]]>
+	</fx:Script>
+	<components:navigationContent>
+		<s:Button label="Back" click="navigator.popView();" />
 	</components:navigationContent>
 	<s:HGroup>
-		
-	<s:BitmapImage source="{data.image}" smooth="true" />
-	<s:VGroup>
-		<s:Label text="{data.last_name}" />
-		<s:Label text="{data.first_name}" />
-	</s:VGroup>
+
+		<s:BitmapImage source="{data.image}" smooth="true" />
+		<s:VGroup>
+			<s:Label text="{data.lastName}" />
+			<s:Label text="{data.firstName}" />
+		</s:VGroup>
 	</s:HGroup>
 	<s:Label text="{data.company}" />
 	<s:Label text="{data.position}" />
 	<s:Label text="{data.note}" />
-	
+	<s:Label text="{data.birthday}" />
+
 </components:View>
